[project]
name = "abs-cli"
version = "0.1.0"
description = "Audiobookshelf CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click",
    "httpx",
    "rich",
]

[project.scripts]
abs = "abs_cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/abs_cli"]
